<resources>
    <string name="app_name">Bhajan Aarti</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="mail_feedback_email" translatable="false">rajendranage1989@gmail.com</string>
    <string name="mail_feedback_subject" translatable="false">Feedback on Bhajan Aarti app</string>
    <string name="please_grant_all_permissions" translatable="false">Please grant all permissions or re-download the app</string>
    <!--<string name="admob_app_id" translatable="false">ca-app-pub-2609666985136692~3212334368</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2609666985136692/9712770819</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-2609666985136692/1654672618</string>-->

    <!-- testing ids-->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-3940256099942544/1033173712</string>


    <!--// Ganapati aarti test ids
    <string name="admob_app_id">ca-app-pub-2609666985136692~4976099823</string>
    <string name="banner_ad_unit_id">ca-app-pub-2609666985136692/1775221418</string>
    <string name="interstitial_ad">ca-app-pub-2609666985136692/5929609913</string>-->

    <string name="devi_bhajan">Devi Bhajan</string>
    <string name="devi_aarti">Hindi Aarti</string>
    <string name="our_apps">Our Apps</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="update_app">Update App</string>
    <string name="exit">Exit</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="rate_us">Rate Us</string>

    <string name="feedback_suggestions">We would love to know feedback and suggestions. \n\n Thank you.</string>
    <string name="send_feedback">Send Feedback Via Gmail</string>
    <string name="title_send_feedback">Send feedback</string>

    <string name="listen_bhajan">Listen Bhajan</string>
    <string name="feedback_or_suggestions">Feedback and Suggestions</string>

    <string name="now_playing">Now Playing</string>


    <string name="aa_maa_aa_tujhe">Aa Maa Aa Tujhe Dil Ne Pukara</string>
    <string name="ambe_tu_hai">Ambe Tu Hai Jagdambe Kali Jay Durge</string>
    <string name="bheja_hai_bulava_tune">Bheja Hai Bulava Tune Sherawaliye</string>
    <string name="bhor_bhai_din_char">Bhor Bhai Din Char Gaya Meri Ambe</string>
    <string name="bigdi_meri_bana">Bigdi Meri Bana Deri O Sherawali</string>
    <string name="chalo_bulava_aaya">Chalo Bulava Aaya Hai Mata Ne</string>
    <string name="durga_hai_meri">Durga Hai Meri Maa Ambe Hai Meri Maa</string>
    <string name="hey_naam_re_sabse">Hey Naam Re Sabse Bada Tera Naam</string>
    <string name="maa_sun_le_pukar">Maa Sun Le Pukar Main Aaya Tere Dwar</string>
    <string name="maiya_ka_chola">Maiya Ka Chola Hai Rangla Sherawali</string>
    <string name="maiya_main_nihal">Maiya Main Nihaal Ho Gaya Sab Kar de</string>
    <string name="man_tera_mandir">Man Tera Mandir Aankhe Diya</string>
    <string name="main_toh_aarti_utaru">Main Toh Aarti Utaru Re Santoshi Mata Ki</string>
    <string name="main_balak_tu_mata">Main Balak Tu Mata Sherawaliye</string>
    <string name="meri_akhiyon_ke_samne">Meri Akhiyon Ke Samne Hi Rehna</string>
    <string name="meri_jholi_chhoti">Meri Jholi Chhoti Pad Gayee Re</string>
    <string name="na_main_mangu">Na Main Mangu Sona Devi Bhajan</string>
    <string name="pyara_saja_hai">Pyara Saja Hai Tera Dwar Bhavani</string>
    <string name="sher_pe_sawar">Sher Pe Sawar Hoke Aaja Sherawaliye</string>
    <string name="suno_suno_ek">Suno Suno Ek Kahani Suno Suno</string>
    <string name="tune_mujhe_bulaya">Tune Mujhe Bulaya Sherawaliye</string>
    <string name="yahaan_wahaan_apni">Yahaan Wahaan Apni Santoshi Maa</string>

    <string name="shailputri_aarti">Day 1: Mata Shailputri Aarti</string>
    <string name="bhrahmcharini_aart">Day 2: Mata Brahmacharini Aarti</string>
    <string name="chandraghata_aarti">Day 3: Mata Chandraghanta Aarti</string>
    <string name="kushmanda_aarti">Day 4: Mata Kushmanda Aarti</string>
    <string name="skandmata_aarti">Day 5: Mata Skandmata Aarti</string>
    <string name="katyayani_aarti">Day 6: Mata Katyayani Aarti</string>
    <string name="kalratri_aarti">Day 7: Mata Kalratri Aarti</string>
    <string name="mahagauri_aarti">Day 8: Mata Mahagauri Aarti</string>
    <string name="sidhhidatri_aarti">Day 9: Mata Siddhidatri Aarti</string>
</resources>
