<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMusic"
            android:icon="@drawable/ic_music_24px"
            android:title="@string/devi_bhajan"/>
        <item
            android:id="@+id/navHinAartiEng"
            android:icon="@drawable/ic_text_24px"
            android:title="@string/hindi_aarti"/>
        <item
            android:id="@+id/navMarAartiEng"
            android:icon="@drawable/ic_text_24px"
            android:title="@string/marathi_aarti"/>
        <item
            android:id="@+id/navOurApps"
            android:icon="@drawable/ic_more_apps_24px"
            android:title="@string/our_apps"/>
        <item
            android:id="@+id/navExit"
            android:icon="@drawable/ic_exit_24px"
            android:title="@string/exit"/>
        <item
            android:id="@+id/navRateUs"
            android:icon="@drawable/ic_rate_us_24px"
            android:title="@string/rate_us"/>
        <item
            android:id="@+id/navDisclaimer"
            android:icon="@drawable/ic_disclaimer_24px"
            android:title="@string/disclaimer"/>
        <item
            android:id="@+id/navShare"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_app"/>
        <item
            android:id="@+id/navFeedback"
            android:icon="@drawable/ic_feedback_24px"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/navUpdate"
            android:icon="@drawable/ic_update_24px"
            android:title="@string/update_app"/>
    </group>
</menu>
